--- a/views/index.erb
+++ b/views/index.erb
@@ -14,14 +14,22 @@
 	  });
     });
   </script>
+  
+  <style type="text/css">
+    .body1 {
+      position:absolute;
+      top: 30%;
+      left:40%
+    };
+  </style>
 
 
 </head>
-<body>
-	<body>
-  			Guess: <input type="text" id="guess">
-  			<button>Try</button>
-  </body>
+<h1 class = "banner">Number Guess Game</h1>
+<body class = "body1">
+  
+  Guess: <input type="text" id="guess">
+  <button>Try</button>
   <p id='ans'></p>
 </body>
 </html>
